# timer

./: .gitignore  pyproject.toml  setup.cfg
time_manager/: __init__.py  time_manager.py  time_manager.pyi
timer/: timer.py
